chore(cors): use stream toList for allowed origins parsing